Edit index.html, index.js, style.css

--- a/index.html
+++ b/index.html
@@ -16,75 +16,30 @@
 
   <div class="container">
     <div class="logo">
-      <img src="/images/logo.svg" alt="logo">
+      <img src="images/logo.svg" alt="logo">
     </div>
-    <div class="component-mobile">
-      <div class="choice-panel">
-        <div class="bill">
-          <img class="dollar-icon" src="/images/icon-dollar.svg" alt="icon of dollar">
-          <p class="title">Bill</p>
-          <input type="text" name="" id="">
-        </div>
-        <div class="tip-selector">
-          <p class="title bil">Select Tip %</p>
-          <div class="button-container">
-            <button class="tip per5">5%</button>
-            <button class="tip per10">10%</button>
-            <button class="tip per15">15%</button>
-            <button class="tip per25">25%</button>
-            <button class="tip per50">50%</button>
-            <input type="text" class="custom" placeholder="Custom">
-          </div>
-          <div class="num-of-people">
-            <img class="people-icon" src="/images/icon-person.svg" alt="icon of dollar">
-            <p class="title">Number of people</p>
-            <input type="text" name="" id="">
-          </div>
-        </div>
-      </div>
-      <div class="result-panel">
-        <div class="tip-amount">
-          <div class="tip-amount-text">
-            <p>Tip Amount</p>
-            <span>/ person</span>
-          </div>
-          <div class="cost">
-            <p>$4.27</p>
-          </div>
-        </div>
-        <div class="total">
-          <div class="total-text">
-            <p>Tip Amount</p>
-            <span>/ person</span>
-          </div>
-          <div class="cost">
-            <p>$32.79</p>
-          </div>
-        </div>
-        <button class="reset">RESET</button>
-      </div>
-    </div>
+    
     <div class="component-desktop">
       <div class="choice-panel">
         <div class="bill">
-          <img class="dollar-icon" src="/images/icon-dollar.svg" alt="icon of dollar">
+          <img class="dollar-icon" src="images/icon-dollar.svg" alt="icon of dollar">
           <p class="title">Bill</p>
-          <input type="text" name="" id="">
+          <input type="text" class="billInput" name="" id="">
         </div>
         <div class="tip-selector">
           <p class="title bil">Select Tip %</p>
           <div class="button-container">
-            <button class="tip per5">5%</button>
-            <button class="tip per10">10%</button>
-            <button class="tip per15">15%</button>
-            <button class="tip per25">25%</button>
-            <button class="tip per50">50%</button>
-            <input type="text" class="custom">
+            <button class="tip" id="5">5%</button>
+            <button class="tip " id="10">10%</button>
+            <button class="tip " id="15">15%</button>
+            <button class="tip " id="25">25%</button>
+            <button class="tip " id="50">50%</button>
+            <input type="text" class="custom" placecholder="custom">
           </div> 
           <div class="num-of-people">
-            <img class="people-icon" src="/images/icon-person.svg" alt="icon of dollar">
+            <img class="people-icon" src="images/icon-person.svg" alt="icon of dollar">
               <p class="title">Number of people</p>
-            <input type="text" name="" id="">
+            <input type="text" class="numPeople" name="" id="">
           </div>
         </div>
       </div>
@@ -96,16 +51,15 @@
               <span>/ person</span>
             </div>
             <div class="cost">
-              <p>$4.27</p>
+              <p class="tip-amount-result">$0</p>
             </div>
           </div>
           <div class="total">
             <div class="total-text">
-              <p>Tip Amount</p>
-              <span>/ person</span>
+              <p>Total</p>
             </div>
             <div class="cost">
-              <p>$32.79</p>
+              <p class="total-amount">$0</p>
             </div>
           </div>
         </div>
